Fixing layout issue and update of layout and styling for random user generator

--- a/random-user-generator/style.css
+++ b/random-user-generator/style.css
@@ -7,45 +7,90 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: darkslategray;
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 3.5rem;
+  letter-spacing: 2px;
+}
+
+a {
+  text-decoration: none;
+  color: darkslategray;
+  transition: all 1s ease;
+}
+
+a:hover {
+  text-decoration: none;
+  color: rgb(77, 109, 109);
 }
 
 header {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 80vw;
-  /* border: 2px solid green; */
+}
+
+#headerText {
+  width: 45vw;
+  min-width: 350px;
+  font-size: 1.1em;
+  line-height: 1.6;
 }
 
 #authors {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  /* border: 2px solid red; */
   justify-content: center;
 }
 
 .authorContainer {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin: 20px;
   padding: 10px;
   width: 50%;
-  min-width: 350px;
+  min-width: 450px;
   height: 300px;
   background: whitesmoke;
   box-shadow: 0 0 20px rgb(90, 90, 90);
   border-radius: 4px;
 }
 
+.leftAuthorColumn {
+  float: left;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 35%;
+  height: 100%;
+}
+
+.rightAuthorColumn {
+  float: right;
+  width: 55%;
+}
+
+.authorName {
+  height: 60px;
+  font-weight: bold;
+  text-align: center;
+  margin: 7px;
+}
+
 .authorText {
   width: 80%;
+  margin-top: 10px;
+  max-width: 300px;
 }
 
 img {
   border-radius: 50%;
+}
+
+.fas, .fab {
+  font-size: 2.5rem;
+  padding: 3px;
+  margin-top: 15px;
 }
